adds service test for getting users boards